[gd_scene load_steps=35 format=3 uid="uid://dqixelu104c0r"]

[ext_resource type="Script" path="res://src/battle/battle.gd" id="1_28vn4"]
[ext_resource type="Script" path="res://src/battle/yokai_helper.gd" id="3_yiroh"]
[ext_resource type="Script" path="res://src/battle/ui_helper.gd" id="4_2n2qt"]
[ext_resource type="Texture2D" uid="uid://cv2rcesby7pil" path="res://res/battle/buttons/item_buttont_two.png" id="6_737io"]
[ext_resource type="Texture2D" uid="uid://dvf5upa2ndx03" path="res://res/battle/buttons/target_button_two.png" id="7_0cdhu"]
[ext_resource type="Texture2D" uid="uid://d2dq6fvjpsycn" path="res://res/battle/buttons/soulimate_two.png" id="8_qwbhq"]
[ext_resource type="Texture2D" uid="uid://dr1sc0yy5d0rx" path="res://res/battle/buttons/purify_button_two.png" id="9_imt5t"]
[ext_resource type="Texture2D" uid="uid://dkmmblycfom3x" path="res://res/battle/ui/target/target_02.png" id="10_u3foe"]
[ext_resource type="Texture2D" uid="uid://b8nxdap56fkw1" path="res://res/battle/battle_yokai/ff_1.png" id="11_gem68"]
[ext_resource type="PackedScene" uid="uid://b3v3yrawn71wv" path="res://scn/battle/sub/items.tscn" id="11_kis0f"]
[ext_resource type="PackedScene" uid="uid://byuu60sehf7ok" path="res://scn/battle/sub/target.tscn" id="12_bmpme"]
[ext_resource type="Texture2D" uid="uid://dmf7lgww6h662" path="res://res/battle/battle_yokai/ff_2.png" id="12_o6usf"]
[ext_resource type="PackedScene" uid="uid://c7k2h62jlwjwd" path="res://scn/battle/sub/soulimate.tscn" id="13_clbgi"]
[ext_resource type="Texture2D" uid="uid://du6e8g4b7c8xs" path="res://res/battle/battle_yokai/ff_3.png" id="13_myqaq"]
[ext_resource type="PackedScene" uid="uid://nwiqhsqjtw60" path="res://scn/battle/sub/purify.tscn" id="14_eeg27"]
[ext_resource type="Texture2D" uid="uid://d1e7nrdftl8pc" path="res://res/battle/ui/q_sign.png" id="14_hoddt"]
[ext_resource type="Texture2D" uid="uid://8in5h2wwviwf" path="res://res/yokai/cadin/cadin_medall.png" id="15_cdgot"]
[ext_resource type="Texture2D" uid="uid://bdoxxvscku02" path="res://res/battle/ui/e_sign.png" id="15_co87e"]
[ext_resource type="PackedScene" uid="uid://bn0spooqowien" path="res://scn/battle/sub/win_screen.tscn" id="16_2w66e"]
[ext_resource type="Texture2D" uid="uid://cryqic7d88ff4" path="res://res/battle/ui/wheel.png" id="16_uj23c"]
[ext_resource type="Texture2D" uid="uid://dpu6nnf1qw8hg" path="res://res/battle/ui/start/overlay.png" id="21_bdhw5"]
[ext_resource type="Texture2D" uid="uid://1d7hlxknpmp6" path="res://res/battle/ui/start/overlay_2.png" id="22_8eopg"]

[sub_resource type="Animation" id="Animation_kdyfp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3n7bn"]
resource_name = "buttons_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 16)]
}

[sub_resource type="Animation" id="Animation_sk2o5"]
resource_name = "buttons_show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l10kg"]
_data = {
"RESET": SubResource("Animation_kdyfp"),
"buttons_hide": SubResource("Animation_3n7bn"),
"buttons_show": SubResource("Animation_sk2o5")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_pjpc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_gem68")
}, {
"duration": 1.0,
"texture": ExtResource("12_o6usf")
}, {
"duration": 1.0,
"texture": ExtResource("13_myqaq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qigjb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_ui/left_sign:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 86)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_ui/right_sign:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(230, 86)]
}

[sub_resource type="Animation" id="Animation_0l5i2"]
resource_name = "fade_in"
length = 0.75
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_end"
}]
}

[sub_resource type="Animation" id="Animation_qfu8t"]
resource_name = "q_e_anim"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_ui/left_sign:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 86), Vector2(8, 86)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_ui/right_sign:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(230, 86), Vector2(232, 86)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7eoag"]
_data = {
"RESET": SubResource("Animation_qigjb"),
"fade_in": SubResource("Animation_0l5i2"),
"q_e_anim": SubResource("Animation_qfu8t")
}

[sub_resource type="Animation" id="Animation_w77cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui_helper/Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nj4c5"]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui_helper/Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6w7eq"]
_data = {
"RESET": SubResource("Animation_w77cg"),
"start": SubResource("Animation_nj4c5")
}

[node name="battle" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_28vn4")

[node name="background" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 135.0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="yokai_helper" type="Node" parent="."]
script = ExtResource("3_yiroh")

[node name="enemies" type="Node2D" parent="yokai_helper"]

[node name="enemy_yokai_anim_player" type="AnimationPlayer" parent="yokai_helper/enemies"]

[node name="players" type="Node2D" parent="yokai_helper"]
position = Vector2(0, -17)

[node name="player_yokai_anim_player" type="AnimationPlayer" parent="yokai_helper/players"]

[node name="debuglabel" type="Label" parent="yokai_helper"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 8

[node name="Timer" type="Timer" parent="yokai_helper"]
wait_time = 0.2
autostart = true

[node name="ui_helper" type="Node" parent="."]
script = ExtResource("4_2n2qt")

[node name="main_menue" type="Node2D" parent="ui_helper"]

[node name="medalls" type="Node" parent="ui_helper/main_menue"]

[node name="Sprite2D" type="Sprite2D" parent="ui_helper/main_menue/medalls"]
position = Vector2(103, 115)
texture = ExtResource("15_cdgot")

[node name="Sprite2D2" type="Sprite2D" parent="ui_helper/main_menue/medalls"]
position = Vector2(120, 115)
texture = ExtResource("15_cdgot")

[node name="Sprite2D3" type="Sprite2D" parent="ui_helper/main_menue/medalls"]
position = Vector2(137, 115)
texture = ExtResource("15_cdgot")

[node name="buttons" type="Node2D" parent="ui_helper/main_menue"]

[node name="item" type="Sprite2D" parent="ui_helper/main_menue/buttons"]
position = Vector2(211, 128)
texture = ExtResource("6_737io")
hframes = 2

[node name="target" type="Sprite2D" parent="ui_helper/main_menue/buttons"]
position = Vector2(151, 128)
texture = ExtResource("7_0cdhu")
hframes = 2

[node name="soulimate" type="Sprite2D" parent="ui_helper/main_menue/buttons"]
position = Vector2(92, 128)
texture = ExtResource("8_qwbhq")
hframes = 2

[node name="purify" type="Sprite2D" parent="ui_helper/main_menue/buttons"]
position = Vector2(32, 128)
texture = ExtResource("9_imt5t")
hframes = 2

[node name="wheel" type="Sprite2D" parent="ui_helper/main_menue"]
position = Vector2(120, 115)
texture = ExtResource("16_uj23c")

[node name="buttons_anim_player" type="AnimationPlayer" parent="ui_helper/main_menue"]
libraries = {
"": SubResource("AnimationLibrary_l10kg")
}

[node name="speed_up" type="AnimatedSprite2D" parent="ui_helper/main_menue"]
visible = false
position = Vector2(16, 8)
sprite_frames = SubResource("SpriteFrames_pjpc4")
autoplay = "default"
frame_progress = 0.964751

[node name="ui" type="Node2D" parent="ui_helper"]
position = Vector2(0, -7)

[node name="main_ui" type="Node2D" parent="ui_helper/ui"]

[node name="left_sign" type="Sprite2D" parent="ui_helper/ui/main_ui"]
position = Vector2(10, 86)
texture = ExtResource("14_hoddt")

[node name="right_sign" type="Sprite2D" parent="ui_helper/ui/main_ui"]
position = Vector2(230, 86)
texture = ExtResource("15_co87e")

[node name="ui_anim_player" type="AnimationPlayer" parent="ui_helper/ui/main_ui"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7eoag")
}
autoplay = "q_e_anim"

[node name="target" type="Sprite2D" parent="ui_helper/ui/main_ui"]
visible = false
position = Vector2(47, 48)
texture = ExtResource("10_u3foe")

[node name="sub_ui" type="Node" parent="ui_helper/ui"]

[node name="items" parent="ui_helper/ui/sub_ui" instance=ExtResource("11_kis0f")]
process_mode = 4
visible = false

[node name="target" parent="ui_helper/ui/sub_ui" instance=ExtResource("12_bmpme")]
process_mode = 4
visible = false

[node name="soulimate" parent="ui_helper/ui/sub_ui" instance=ExtResource("13_clbgi")]
process_mode = 4
visible = false

[node name="purify" parent="ui_helper/ui/sub_ui" instance=ExtResource("14_eeg27")]
process_mode = 4
visible = false

[node name="win_screen" parent="ui_helper/ui/sub_ui" instance=ExtResource("16_2w66e")]
process_mode = 4
visible = false

[node name="overlay" type="Node" parent="ui_helper/ui"]

[node name="ui_anim_player" type="AnimationPlayer" parent="ui_helper/ui"]

[node name="Start" type="Node2D" parent="ui_helper"]

[node name="Overlay" type="Sprite2D" parent="ui_helper/Start"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(120, 67.5)
texture = ExtResource("21_bdhw5")

[node name="Overlay2" type="Sprite2D" parent="ui_helper/Start"]
position = Vector2(120, 67.5)
texture = ExtResource("22_8eopg")

[node name="AnimPlayer" type="AnimationPlayer" parent="ui_helper"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6w7eq")
}

[connection signal="timeout" from="yokai_helper/Timer" to="yokai_helper" method="_on_timer_timeout"]
